extends Node2D
class_name Pickup

# Base class for all pickups in the game
# Note: Pickups have to be added to a specific act
func _ready():
	pass


func _on_VisibilityNotifier2D_screen_entered():
	pass # Replace with function body.


func _on_VisibilityNotifier2D_screen_exited():
	pass # Replace with function body.


func _on_Area2D_area_entered(area):
	pass # Replace with function body.
